# gec-grpo-training

./: .gitignore  CLAUDE.md  Makefile  README.md  merge_checkpoints.py  pyproject.toml  requirements_test.txt  test_reward_models.py
.claude/: settings.local.json
configs/: functiongemma_270m.yaml  gec_typix_3090.yaml  gec_typix_700m.yaml  gec_typix_a100.yaml  lfm2_350m.yaml  lfm2_350m_book_flight.yaml  lfm2_350m_debug.yaml  lfm2_350m_lora.yaml
greco/: README.md  correlation.py  m2_for_corr.py  models.py  requirements.txt  rerank.py  run_combination.py  score_all.py  train.py
greco/data/conll-official/texts/: IITB  PKU
greco/utils/: data.py  edit.py  prepare_data.py
quantize_awq/: README.md  pyproject.toml  quantize.py
scripts/: preview_generations.py  tune_gain_epsilon.py  tune_ged_reward.py
src/browser_control/: __init__.py  config.py  evaluate.py  fine_tune.py  modal_infra.py  paths.py
src/gec/: __init__.py  config.py  dataset.py  fine_tune.py  modal_infra.py  paths.py  rewards.py  sft_stage1.py  sft_stage2.py
